--- a/FINAL.html
+++ b/FINAL.html
@@ -353,7 +353,7 @@
       responsive:{
         600:{
             items:1,
-            nav:false1
+            nav:false
         },
         900:{
             items:5,
