--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
     
         <div class="header-action">
             <a href="#" class="cart">
-                <i class='bx bx-log-in-circle bx-tada bx-rotate-90 bx-md' ></i>
-                <i class='bx bx-cart-alt  bx-md' ></i>
-                
+                <a href="./form.html" target="_blank" id="form">
+                    <i class='bx bx-log-in-circle bx-tada bx-rotate-90 bx-md'></i>
+                </a>
+                <i class='bx bx-cart-alt  bx-md' ></i> 
             </a>
         </div>  
     </div>
