--- a/form.html
+++ b/form.html
@@ -97,13 +97,12 @@
         <!-- end dropdown menu -->
     </header>
       
-   
+        <!-- form -->
     <div class="container">
         <div class="forms">
             <!-- form đăng nhập -->
             <div class="form login">
                 <span class="title">Đăng nhập</span>
-
                 <form action="#">
                     <div class="input-field">
                         <input type="text" placeholder="youremail@email.com" required>
