--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
     <!-- end slider -->
 
     <!-- content-container -->
-        <!-- Sản phẩm bán chạy -->
+        <!-- Sản phẩm khuyến mãi -->
     <div class="product"> 
         <div class="prod-header">
-            <a href="#"><h2 class="product-category">Sản Phẩm Bán Chạy</h2></a>
+            <a href="#"><h2 class="product-category">Sản Phẩm Khuyến Mãi</h2></a>
             <a href="#"><i class="product-more">Xem thêm</i> </a>
         </div>
         <button class="pre-btn"><img src="./product-slider/product-slider/images/arrow.png" alt=""></button>
@@ -239,91 +239,98 @@
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
+                    <!-- <span class="discount-tag">50% off</span> -->
                     <img src="./CSS/image/product1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">Thêm vào giỏ hàng</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">tên sản phẩm</h2>
                     <p class="product-short-description">Mô tả sản phẩm</p>
-                    <span class="price">Giá sau giảm</span><span class="actual-price">Giá gốc</span>
+                    <span class="price">Giá sau giảm</span>
+                    <!-- <span class="actual-price">Giá gốc</span> -->
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
+                    <!-- <span class="discount-tag">50% off</span> -->
                     <img src="./CSS/image/product1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">Thêm vào giỏ hàng</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">tên sản phẩm</h2>
                     <p class="product-short-description">Mô tả sản phẩm</p>
-                    <span class="price">Giá sau giảm</span><span class="actual-price">Giá gốc</span>
+                    <span class="price">Giá sau giảm</span>
+                    <!-- <span class="actual-price">Giá gốc</span> -->
                 </div>
             </div>
             
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
+                    <!-- <span class="discount-tag">50% off</span> -->
                     <img src="./CSS/image/product1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">Thêm vào giỏ hàng</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">tên sản phẩm</h2>
                     <p class="product-short-description">Mô tả sản phẩm</p>
-                    <span class="price">Giá sau giảm</span><span class="actual-price">Giá gốc</span>
+                    <span class="price">Giá sau giảm</span>
+                    <!-- <span class="actual-price">Giá gốc</span> -->
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
+                    <!-- <span class="discount-tag">50% off</span> -->
                     <img src="./CSS/image/product1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">Thêm vào giỏ hàng</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">tên sản phẩm</h2>
                     <p class="product-short-description">Mô tả sản phẩm</p>
-                    <span class="price">Giá sau giảm</span><span class="actual-price">Giá gốc</span>
+                    <span class="price">Giá sau giảm</span>
+                    <!-- <span class="actual-price">Giá gốc</span> -->
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
+                    <!-- <span class="discount-tag">50% off</span> -->
                     <img src="./CSS/image/product1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">Thêm vào giỏ hàng</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">tên sản phẩm</h2>
                     <p class="product-short-description">Mô tả sản phẩm</p>
-                    <span class="price">Giá sau giảm</span><span class="actual-price">Giá gốc</span>
+                    <span class="price">Giá sau giảm</span>
+                    <!-- <span class="actual-price">Giá gốc</span> -->
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
+                    <!-- <span class="discount-tag">50% off</span> -->
                     <img src="./CSS/image/product1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">Thêm vào giỏ hàng</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">tên sản phẩm</h2>
                     <p class="product-short-description">Mô tả sản phẩm</p>
-                    <span class="price">Giá sau giảm</span><span class="actual-price">Giá gốc</span>
+                    <span class="price">Giá sau giảm</span>
+                    <!-- <span class="actual-price">Giá gốc</span> -->
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
+                    <!-- <span class="discount-tag">50% off</span> -->
                     <img src="./CSS/image/product1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">Thêm vào giỏ hàng</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">tên sản phẩm</h2>
                     <p class="product-short-description">Mô tả sản phẩm</p>
-                    <span class="price">Giá sau giảm</span><span class="actual-price">Giá gốc</span>
+                    <span class="price">Giá sau giảm</span>
+                    <!-- <span class="actual-price">Giá gốc</span> -->
                 </div>
             </div>
             
