--- a/form.html
+++ b/form.html
@@ -14,7 +14,9 @@
     <link rel = "icon" href ="./CSS/image/logo.jpg" type = "image/x-icon">
 </head>
 <body>
-    <header id="header">
+<div id="body-wrap">
+    <div class="content">
+        <header id="header">
           <!-- nav-bar -->
           <div id="topnav">
             <a href="./index.html" class="logo">
@@ -95,10 +97,10 @@
               </div>
         </div>
         <!-- end dropdown menu -->
-    </header>
-      
-        <!-- form -->
-    <div class="container">
+        </header>
+
+            <!-- form -->
+        <div class="container">
         <div class="forms">
             <!-- form đăng nhập -->
             <div class="form login">
@@ -181,8 +183,29 @@
                 </div>
             </div>
         </div>
+        </div>
     </div>
+        <!-- footer -->
+    <div id="footer">
+            <div class="social">
+               <div class="tooltip">
+                    <span class="tooltiptext">Facebook</span>
+                    <a href="https://www.facebook.com/lebisou.accessories" target="_blank">
+                        <i class='bx bxl-facebook-circle bx-sm'></i>
+                    </a>
+                </div>
+            <div class="tooltip">
+                <span class="tooltiptext">Instagram</span>
+                <a href="https://www.instagram.com/lebisou.accessories/" target="_blank">
+                    <i class='bx bxl-instagram-alt bx-sm ' ></i>
+                </a>
+            </div>  
+    
+        </div>
+    <!-- end footer -->
 
+    </div>
+</div>    
     <script src="./sign up form/form.js"></script>
 
 </body>
