--- a/form.html
+++ b/form.html
@@ -107,7 +107,7 @@
                 <span class="title">Đăng nhập</span>
                 <form action="#">
                     <div class="input-field">
-                        <input type="text" placeholder="youremail@email.com" required>
+                        <input type="text" placeholder="youremail@email.com" class= "email" required>
                         <i class="bx bx-envelope icon"></i>
                     </div>
                     <div class="input-field">
@@ -147,17 +147,17 @@
                         <i class="bx bx-user"></i>
                     </div>
                     <div class="input-field">
-                        <input type="text" placeholder="youremail@email.com" required>
+                        <input type="text" placeholder="youremail@email.com" class="email" required>
                         <i class="bx bx-envelope icon"></i>
                     </div>
                     <div class="input-field">
-                        <input type="password" class="password" placeholder="Tạo mật khẩu" required>
+                        <input type="password" class="password" placeholder="Tạo mật khẩu" class="password"  required>
                         <i class="bx bx-lock icon"></i>
                         <i class="bx bx-hide showHidePw"></i>
 
                     </div>
                     <div class="input-field">
-                        <input type="password" class="password" placeholder="Nhập lại mật khẩu" required>
+                        <input type="password" class="password2" placeholder="Nhập lại mật khẩu" required>
                         <i class="bx bx-lock icon"></i>
                         <i class="bx bx-hide showHidePw"></i>
                     </div>
@@ -207,6 +207,5 @@
     </div>
 </div>    
     <script src="./sign up form/form.js"></script>
-
 </body>
 </html>
