--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
                         <button class="card-btn btn-cart btn">Thêm vào giỏ hàng</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand content-product-h3 cart-item-title">tên sản phẩm</h2>
+                        <h2 class="product-brand content-product-h3 cart-item-title">tên sản phẩm x</h2>
                         <p class="product-short-description">Mô tả sản phẩm</p>
-                        <div class="price"><span class="cart-price cart-column">100000đ</span>
+                        <div class="price"><span class="cart-price cart-column">1000000đ</span>
                             <!-- <span class="actual-price">200000đ</span> -->
                         </div>
                     </div>
