--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Icon logo-->
     <link rel = "icon" href ="./CSS/image/logo.jpg" type = "image/x-icon">
     <!-- LINK CSS PRODUCT -->
-    <link rel="stylesheet" href="./product-slider/product-slider/product-slider.css">
+    <link rel="stylesheet" href="./product and cart/product-slider/product-slider.css">
 </head>
 
 <body>
@@ -158,8 +158,8 @@
                 <a href="#"><h2 class="product-category">Sản Phẩm Khuyến Mãi</h2></a>
                 <a href="#"><i class="product-more">Xem thêm</i> </a>
             </div>
-            <button class="pre-btn"><img src="./product-slider/product-slider/images/arrow.png" alt=""></button>
-            <button class="nxt-btn"><img src="./product-slider/product-slider/images/arrow.png" alt=""></button>
+            <button class="pre-btn"><img src="./product and cart/product-slider/images/arrow.png" alt=""></button>
+            <button class="nxt-btn"><img src="./product and cart/product-slider/images/arrow.png" alt=""></button>
             <div class="product-container cart-row">
                 <div class="product-card cart-item ">
                     <div class="product-image">
@@ -234,8 +234,8 @@
                 <a href="#"><h2 class="product-category">Sản Phẩm Bán Chạy</h2></a>
                 <a href="#"><i class="product-more">Xem thêm</i> </a>
             </div>        
-            <button class="pre-btn"><img src="./product-slider/product-slider/images/arrow.png" alt=""></button>
-            <button class="nxt-btn"><img src="./product-slider/product-slider/images/arrow.png" alt=""></button>
+            <button class="pre-btn"><img src="./product and cart/product-slider/images/arrow.png" alt=""></button>
+            <button class="nxt-btn"><img src="./product and cart/product-slider/images/arrow.png" alt=""></button>
             <div class="product-container">
                 <div class="product-card cart-item ">
                     <div class="product-image">
@@ -428,7 +428,7 @@
     }
     </script>
 </body>
-<script src="./cart.js"></script>
-<script src="./product-slider/product-slider/script.js"></script>
+<script src="./product and cart/cart.js"></script>
+<script src="./product and cart/product-slider/prod-slider.js"></script>
 
 </html>
